--- a/slides/references.bib
+++ b/slides/references.bib
@@ -14,3 +14,80 @@
 	note = {Publisher: Taylor & Francis
 {\_}eprint: https://doi.org/10.1080/00031305.2017.1375986}
 }
+
+@article{boettiger2015,
+	title = {An introduction to Docker for reproducible research},
+	author = {Boettiger, Carl},
+	year = {2015},
+	month = {01},
+	date = {2015-01-20},
+	journal = {ACM SIGOPS Operating Systems Review},
+	pages = {71{\textendash}79},
+	volume = {49},
+	number = {1},
+	doi = {10.1145/2723872.2723882},
+	url = {https://doi.org/10.1145/2723872.2723882}
+}
+
+@article{eglen2017,
+	title = {Toward standard practices for sharing computer code and programs in neuroscience},
+	author = {Eglen, Stephen J. and Marwick, Ben and Halchenko, Yaroslav O. and Hanke, Michael and Sufi, Shoaib and Gleeson, Padraig and Silver, R. Angus and Davison, Andrew P. and Lanyon, Linda and Abrams, Mathew and Wachtler, Thomas and Willshaw, David J. and Pouzat, Christophe and Poline, Jean-Baptiste},
+	year = {2017},
+	month = {06},
+	date = {2017-06},
+	journal = {Nature Neuroscience},
+	pages = {770--773},
+	volume = {20},
+	number = {6},
+	doi = {10.1038/nn.4550},
+	url = {https://www.nature.com/articles/nn.4550},
+	note = {Number: 6
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{nüst2019,
+	title = {containerit: Generating Dockerfiles for reproducible research with R},
+	author = {{Nüst}, Daniel and Hinz, Matthias},
+	year = {2019},
+	month = {08},
+	date = {2019-08-21},
+	journal = {Journal of Open Source Software},
+	pages = {1603},
+	volume = {4},
+	number = {40},
+	doi = {10.21105/joss.01603},
+	url = {https://joss.theoj.org/papers/10.21105/joss.01603},
+	langid = {en}
+}
+
+@article{nüst2020,
+	title = {Ten simple rules for writing Dockerfiles for reproducible data science},
+	author = {{Nüst}, Daniel and Sochat, Vanessa and Marwick, Ben and Eglen, Stephen J. and Head, Tim and Hirst, Tony and Evans, Benjamin D.},
+	year = {2020},
+	month = {11},
+	date = {2020-11-10},
+	journal = {PLOS Computational Biology},
+	pages = {e1008316},
+	volume = {16},
+	number = {11},
+	doi = {10.1371/journal.pcbi.1008316},
+	url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1008316},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
+
+@article{nüst2019a,
+	title = {containerit: Generating Dockerfiles for reproducible research with R},
+	author = {{Nüst}, Daniel and Hinz, Matthias},
+	year = {2019},
+	month = {08},
+	date = {2019-08-21},
+	journal = {Journal of Open Source Software},
+	pages = {1603},
+	volume = {4},
+	number = {40},
+	doi = {10.21105/joss.01603},
+	url = {https://joss.theoj.org/papers/10.21105/joss.01603},
+	langid = {en}
+}
