--- a/slides/references.bib
+++ b/slides/references.bib
@@ -91,3 +91,77 @@ Publisher: Nature Publishing Group},
 	url = {https://joss.theoj.org/papers/10.21105/joss.01603},
 	langid = {en}
 }
+
+@article{eglen2017a,
+	title = {Toward standard practices for sharing computer code and programs in neuroscience},
+	author = {Eglen, Stephen J. and Marwick, Ben and Halchenko, Yaroslav O. and Hanke, Michael and Sufi, Shoaib and Gleeson, Padraig and Silver, R. Angus and Davison, Andrew P. and Lanyon, Linda and Abrams, Mathew and Wachtler, Thomas and Willshaw, David J. and Pouzat, Christophe and Poline, Jean-Baptiste},
+	year = {2017},
+	month = {06},
+	date = {2017-06},
+	journal = {Nature Neuroscience},
+	pages = {770--773},
+	volume = {20},
+	number = {6},
+	doi = {10.1038/nn.4550},
+	url = {https://www.nature.com/articles/nn.4550},
+	note = {Number: 6
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@inbook{pittard2020,
+	title = {The Essential Toolbox of Data Science: Python, R, Git, and Docker},
+	author = {Pittard, W. Stephen and Li, Shuzhao},
+	editor = {Li, Shuzhao},
+	year = {2020},
+	date = {2020},
+	publisher = {Springer US},
+	pages = {265--311},
+	series = {Methods in Molecular Biology},
+	doi = {10.1007/978-1-0716-0239-3_15},
+	url = {https://doi.org/10.1007/978-1-0716-0239-3_15},
+	note = {DOI: 10.1007/978-1-0716-0239-3{\_}15},
+	address = {New York, NY},
+	langid = {en}
+}
+
+@misc{getstar,
+	title = {Get started with Binder {\textemdash} Binder 0.1b documentation},
+	url = {https://mybinder.readthedocs.io/en/latest/introduction.html}
+}
+
+@misc{smith2022,
+	title = {Easy R Tutorials with Dev Containers | R-bloggers},
+	author = {Smith, David},
+	year = {2022},
+	month = {08},
+	date = {2022-08-02},
+	url = {https://www.r-bloggers.com/2022/08/easy-r-tutorials-with-dev-containers/},
+	langid = {canadian}
+}
+
+@techreport{gruening2019,
+	title = {Recommendations for the packaging and containerizing of bioinformatics software},
+	author = {Gruening, Bjorn and Sallou, Olivier and Moreno, Pablo and Leprevost, Felipe da Veiga and {Ménager}, {Hervé} and {Søndergaard}, Dan and {Röst}, Hannes and Sachsenberg, Timo and {O'Connor}, Brian and Madeira, {Fábio} and Angel, Victoria Dominguez Del and Crusoe, Michael R. and Varma, Susheel and Blankenberg, Daniel and Jimenez, Rafael C. and Community, BioContainers and Perez-Riverol, Yasset},
+	year = {2019},
+	month = {03},
+	date = {2019-03-20},
+	doi = {10.12688/f1000research.15140.2},
+	url = {https://f1000research.com/articles/7-742},
+	note = {DOI: 10.12688/f1000research.15140.2
+Type: article},
+	langid = {en}
+}
+
+@article{boettiger2017,
+	title = {An Introduction to Rocker: Docker Containers for R},
+	author = {Boettiger, Carl and Eddelbuettel, Dirk},
+	year = {2017},
+	date = {2017},
+	journal = {The R Journal},
+	pages = {527--536},
+	volume = {9},
+	number = {2},
+	url = {https://journal.r-project.org/archive/2017/RJ-2017-065/index.html},
+	langid = {en}
+}
