--- a/slides/references.bib
+++ b/slides/references.bib
@@ -165,3 +165,45 @@ Type: article},
 	url = {https://journal.r-project.org/archive/2017/RJ-2017-065/index.html},
 	langid = {en}
 }
+
+@article{kurtzer2017,
+	title = {Singularity: Scientific containers for mobility of compute},
+	author = {Kurtzer, Gregory M. and Sochat, Vanessa and Bauer, Michael W.},
+	year = {2017},
+	month = {05},
+	date = {2017-05-11},
+	journal = {PLOS ONE},
+	pages = {e0177459},
+	volume = {12},
+	number = {5},
+	doi = {10.1371/journal.pone.0177459},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0177459},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
+
+@article{nüst2020a,
+	title = {The Rockerverse: Packages and Applications for Containerisation with R},
+	author = {{Nüst}, Daniel and Eddelbuettel, Dirk and Bennett, Dom and Cannoodt, Robrecht and Clark, Dav and {Daróczi}, Gergely and Edmondson, Mark and Fay, Colin and Hughes, Ellis and Kjeldgaard, Lars and Lopp, Sean and Marwick, Ben and Nolis, Heather and Nolis, Jacqueline and Ooi, Hong and Ram, Karthik and Ross, Noam and Shepherd, Lori and {Sólymos}, {Péter} and Swetnam, Tyson Lee and Turaga, Nitesh and Petegem, Charlotte Van and Williams, Jason and Willis, Craig and Xiao, Nan},
+	year = {2020},
+	date = {2020},
+	journal = {The R Journal},
+	pages = {437--461},
+	volume = {12},
+	number = {1},
+	url = {https://journal.r-project.org/archive/2020/RJ-2020-007/index.html},
+	langid = {en}
+}
+
+@article{nüst2020b,
+	title = {The Rockerverse: Packages and Applications for Containerisation with R},
+	author = {{Nüst}, Daniel and Eddelbuettel, Dirk and Bennett, Dom and Cannoodt, Robrecht and Clark, Dav and {Daróczi}, Gergely and Edmondson, Mark and Fay, Colin and Hughes, Ellis and Kjeldgaard, Lars and Lopp, Sean and Marwick, Ben and Nolis, Heather and Nolis, Jacqueline and Ooi, Hong and Ram, Karthik and Ross, Noam and Shepherd, Lori and {Sólymos}, {Péter} and Swetnam, Tyson Lee and Turaga, Nitesh and Petegem, Charlotte Van and Williams, Jason and Willis, Craig and Xiao, Nan},
+	year = {2020},
+	date = {2020},
+	journal = {The R Journal},
+	pages = {437--461},
+	volume = {12},
+	number = {1},
+	url = {https://journal.r-project.org/archive/2020/RJ-2020-007/index.html},
+	langid = {en}
+}
