--- a/slides/references.bib
+++ b/slides/references.bib
@@ -207,3 +207,72 @@ Type: article},
 	url = {https://journal.r-project.org/archive/2020/RJ-2020-007/index.html},
 	langid = {en}
 }
+
+@article{mölder2021,
+	title = {Sustainable data analysis with Snakemake},
+	author = {{Mölder}, Felix and Jablonski, Kim Philipp and Letcher, Brice and Hall, Michael B. and Tomkins-Tinch, Christopher H. and Sochat, Vanessa and Forster, Jan and Lee, Soohyun and Twardziok, Sven O. and Kanitz, Alexander and Wilm, Andreas and Holtgrewe, Manuel and Rahmann, Sven and Nahnsen, Sven and {Köster}, Johannes},
+	year = {2021},
+	month = {04},
+	date = {2021-04-19},
+	journal = {F1000Research},
+	pages = {33},
+	volume = {10},
+	doi = {10.12688/f1000research.29032.2},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8114187/},
+	note = {PMID: 34035898
+PMCID: PMC8114187}
+}
+
+@techreport{gruening2019a,
+	title = {Recommendations for the packaging and containerizing of bioinformatics software},
+	author = {Gruening, Bjorn and Sallou, Olivier and Moreno, Pablo and Leprevost, Felipe da Veiga and {Ménager}, {Hervé} and {Søndergaard}, Dan and {Röst}, Hannes and Sachsenberg, Timo and {O'Connor}, Brian and Madeira, {Fábio} and Angel, Victoria Dominguez Del and Crusoe, Michael R. and Varma, Susheel and Blankenberg, Daniel and Jimenez, Rafael C. and Community, BioContainers and Perez-Riverol, Yasset},
+	year = {2019},
+	month = {03},
+	date = {2019-03-20},
+	doi = {10.12688/f1000research.15140.2},
+	url = {https://f1000research.com/articles/7-742},
+	note = {DOI: 10.12688/f1000research.15140.2
+Type: article},
+	langid = {en}
+}
+
+@article{nüst2020c,
+	title = {The Rockerverse: Packages and Applications for Containerisation with R},
+	author = {{Nüst}, Daniel and Eddelbuettel, Dirk and Bennett, Dom and Cannoodt, Robrecht and Clark, Dav and {Daróczi}, Gergely and Edmondson, Mark and Fay, Colin and Hughes, Ellis and Kjeldgaard, Lars and Lopp, Sean and Marwick, Ben and Nolis, Heather and Nolis, Jacqueline and Ooi, Hong and Ram, Karthik and Ross, Noam and Shepherd, Lori and {Sólymos}, {Péter} and Swetnam, Tyson Lee and Turaga, Nitesh and Petegem, Charlotte Van and Williams, Jason and Willis, Craig and Xiao, Nan},
+	year = {2020},
+	date = {2020},
+	journal = {The R Journal},
+	pages = {437--461},
+	volume = {12},
+	number = {1},
+	url = {https://journal.r-project.org/archive/2020/RJ-2020-007/index.html},
+	langid = {en}
+}
+
+@article{bignardi2021,
+	title = {Collecting big data with small screens: Group tests of children{\textquoteright}s cognition with touchscreen tablets are reliable and valid},
+	author = {Bignardi, Giacomo and Dalmaijer, Edwin S. and Anwyl-Irvine, Alexander and Astle, Duncan E.},
+	year = {2021},
+	month = {08},
+	date = {2021-08-01},
+	journal = {Behavior Research Methods},
+	pages = {1515--1529},
+	volume = {53},
+	number = {4},
+	doi = {10.3758/s13428-020-01503-3},
+	url = {https://doi.org/10.3758/s13428-020-01503-3},
+	langid = {en}
+}
+
+@article{peikert2021,
+	title = {A Reproducible Data Analysis Workflow With R Markdown, Git, Make, and Docker},
+	author = {Peikert, Aaron and Brandmaier, Andreas M.},
+	year = {2021},
+	month = {05},
+	date = {2021-05-11},
+	journal = {Quantitative and Computational Methods in Behavioral Sciences},
+	pages = {1--27},
+	doi = {10.5964/qcmb.3763},
+	url = {https://qcmb.psychopen.eu/index.php/qcmb/article/view/3763},
+	langid = {en}
+}
